# Mentallama_Criteria_CLS

./: AGENTS.md  BUILD_VERIFICATION_REPORT.md  CLAUDE.md  FINAL_AUDIT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  PAPER_ALIGNED_AUDIT.md  PATCH_02_data_pipeline.py  PATCH_INSTRUCTIONS.md  PRODUCTION_AUDIT_REPORT.md  README.md  RELEASE_NOTES.md  REVIEW_SUMMARY.md  UNIFIED_PAPER_COMPLIANT.patch  VERIFICATION_REPORT.md  VERIFICATION_SUMMARY.txt  pyproject.toml  requirements.txt  verify_build.py
.github/workflows/: ci.yml
.specify/memory/: constitution.md
data/test_small/: test.jsonl  train.jsonl
docs/: PROJECT_SPECIFICATION.md  user_guide.md
examples/: inference_example.py
scripts/: register_model.py  train.py  train_5fold_cv.py  validate.py  validate_quickstart.sh
specs/001-model-use-mentallam/: PHASE6_SUMMARY.md  checklist.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/Project/SubProject/data/: __init__.py  dataset.py  splits.py
src/Project/SubProject/engine/: __init__.py  eval_engine.py  metrics.py  train_engine.py
src/Project/SubProject/models/: __init__.py  model.py  prompt_builder.py
src/Project/SubProject/utils/: __init__.py  log.py  mlflow_utils.py  seed.py  terminal_viz.py
tests/: __init__.py  test_encoder_implementation.py  test_imports.py
